Fixed and organized things (input still doesn't work)